tests/valid_inputs/class_implicit_method_call.cpp

struct S {
	
	int bar() { return 42; }
	int foo() { return bar(); }
}

int main() {
	S s;
	return s.foo();
}
