tests/invalid_inputs/sema/class_method_redefinition.cpp

struct S {
	int foo() {return 42;}
	int foo() {return 666;}
};

int main() {

}
